--- a/S5.ipynb
+++ b/S5.ipynb
@@ -288,7 +288,7 @@
       },
       "outputs": [],
       "source": [
-        "import model"
+        "from model import Net"
       ]
     },
     {
@@ -309,7 +309,7 @@
       },
       "outputs": [],
       "source": [
-        "import utils"
+        "from utils import train, test, plot_model_metrics"
       ]
     },
     {
@@ -701,6 +701,7 @@
         }
       ],
       "source": [
+        "device = torch.device(\"cuda\")\n",
         "model = Net().to(device)\n",
         "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
         "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=15, gamma=0.1, verbose=True)\n",
@@ -758,7 +759,9 @@
           "output_type": "display_data"
         }
       ],
-      "source": []
+      "source": [
+        "plot_model_metrics()"
+      ]
     },
     {
       "cell_type": "code",
