--- a/S5.ipynb
+++ b/S5.ipynb
@@ -288,48 +288,9 @@
       },
       "outputs": [],
       "source": [
-        "from model import Net"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "89gd4_s7AO2y"
-      },
-      "source": [
-        "CODE BLOCK: 8"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "7du4zM474LvT"
-      },
-      "outputs": [],
-      "source": [
+        "from model import Net\n",
         "from utils import train, test, plot_model_metrics"
       ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kCwIPHqwAQgB"
-      },
-      "source": [
-        "CODE BLOCK: 9"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "gpNw3-sy4QGd"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "attachments": {},
